# ftk

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE.txt  MANIFEST.in  README.md  TODO  setup.py  version.txt
cli/: CMakeLists.txt  constants.hh  track_contours.cpp  track_critical_points.cpp  track_levelsets.cpp  track_parallel_vectors.cpp  track_tdgl_vortices.cpp
examples/: CMakeLists.txt
examples/bout_vis/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
examples/common/: trackball.h
examples/common/tdgl_io/: CMakeLists.txt
examples/critical_point_extraction_2d/: CMakeLists.txt  ex_critical_point_extraction_2d.cpp  main.cpp
examples/critical_point_extraction_3d/: CMakeLists.txt  ex_critical_point_extraction_3d.cpp
examples/critical_point_tracking/: CMakeLists.txt  ex_critical_point_tracking_2d_regular.cpp  ex_critical_point_tracking_2d_regular_distributed.cpp  ex_critical_point_tracking_2d_regular_streaming.cpp  ex_critical_point_tracking_3d_regular.cpp  ex_critical_point_tracking_3d_regular_distributed.cpp  ex_critical_point_tracking_bout.cpp  main1.cpp  playground.cpp
examples/critical_point_tracking/legacy/: ex_critical_point_tracking_2d_regular.cpp  ex_critical_point_tracking_2d_regular_distributed.cpp  ex_critical_point_tracking_2d_regular_distributed_streaming.cpp  ex_critical_point_tracking_3d_regular.cpp  ex_critical_point_tracking_3d_regular_distributed_streaming.cpp  ex_critical_point_tracking_3d_regular_streaming.cpp
examples/critical_point_tracking_2d/: CMakeLists.txt  ex_critical_point_tracking_2d.cpp  main.cpp  main1.cpp  main2.cpp  main3.cpp  widget.cpp  widget.h
examples/critical_point_tracking_3d/: CMakeLists.txt  ex_critical_point_tracking_2d.cpp  ex_critical_point_tracking_3d.cpp  main1.cpp  main2.cpp
examples/tracking_graph/: CMakeLists.txt  example_tracking_graph.cpp
examples/union_find/: CMakeLists.txt  connected_component_labeling.hpp  connected_critical_point.hpp  connected_critical_point_test.hpp  critical_point_tracking_2d_union_find.cpp  distributed_critical_point_tracking_2d.cpp  distributed_critical_point_tracking_2d_load_balancing.cpp  distributed_critical_point_tracking_2d_multiple_blocks.cpp  distributed_critical_point_tracking_3d.cpp  distributed_level_set_tracking_2d.cpp  distributed_level_set_tracking_3d.cpp  distributed_memory_parallel.cpp  distributed_memory_parallel_exchange.cpp  distributed_memory_parallel_iexchange.cpp  feature.hpp  shared_memory_parallel.cpp  widget.cpp  widget.h
examples/union_find/scripts/: paraview_level_set_to_volume.py  trajectory_to_vtp.sh
examples/vector_skeleton_2d/: main.cpp
examples/vortex_extraction_tdgl/: CMakeLists.txt  main.cpp  puncture.h  widget.cpp  widget.h
experiments/xgc/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
paraview/: CMakeLists.txt
paraview/FTK/: CMakeLists.txt  paraview.plugin
paraview/FTK/Filters/: ABCFlow3DSource.xml  ABCFlow3DVectorFieldSource.xml  ABCFlowSource.xml  CMakeLists.txt  CappedWovenGradient2DSource.xml  CriticalLineTracker.xml  CriticalPoint2DTracker.xml  CriticalPointTracker.xml  CriticalPointTracker2D.xml  CriticalPointTracker2DSpacetime.xml  CriticalPointTracker3D.xml  DoubleGyre2DSource.xml  DoubleGyreFlowSource.xml  DoubleGyreVectorField2DSource.xml  LevelSetTracker3D.xml  LevelsetTracker2D.xml  LevelsetTracker3D.xml  Merger2DSource.xml  MovingDualRamp3DSource.xml  (+81 more)
src/: CMakeLists.txt  FeatureTransition.cpp  FeatureTransitionMatrix.cpp  GraphColor.cpp  RandomColor.cpp  ZColor.cpp
src/bil/: CMakeLists.txt  bil.c  bil_block.c  bil_misc.c  bil_pio.c  bil_sched.c  bil_timing.c  testbil.c
src/cli/: CMakeLists.txt  ftk-decaf-mpas.cpp  ftk.cpp  ftk.legacy.cpp  xgc.poincare.cpp
src/filters/: a.out  common.cuh  contour_tracker_3d_regular.cu  contour_tracker_3d_regular.cu.cpp  critical_line_tracer_3d_regular.cu  critical_point_tracer.cuh  critical_point_tracer_2d_regular.cu  critical_point_tracer_2d_regular.cu.cpp  critical_point_tracer_2d_regular.cu.prehip  critical_point_tracer_2d_regular_sycl.cpp  critical_point_tracer_3d_regular.cu  critical_point_tracer_3d_regular.cu.cpp  locator2.cuh  m2.cuh  m2e.cuh  me2.cuh  mx3.cuh  mx4.cuh  particle_tracer_mpas.cu  poincare.cu  tdgl_vortex_tracker_3d_regular.cu  tdgl_vortex_tracker_3d_regular.cu.cpp  threadIdx.cuh  threadIdx.cuh.hh  utils.cuh  utils.cuh.hh  vfgpu.cu.bak  xgc_blob_filament_tracker.cu  xgc_blob_filament_tracker.cu.cpp  xgc_filament_tracker.cu
src/numeric/: polynomial.cpp  polynomial_solver.cpp
standalone/: CMakeLists.txt  cli_constants.hh  critical_point_tracking.cpp  levelset_tracking.cpp  track_critical_points.cpp  track_levelsets.cpp
tests/: CMakeLists.txt  catch.hh  constants.hh  ct.cpp  main.cpp  main.hh  main.hh.in  synthesize_xgc_data.py  synthesize_xgc_data.py.in  test_adios2.cpp  test_array_group_stream.cpp  test_array_stream.cpp  test_constants.hh  test_conv.cpp  test_critical_point_tracking.cpp  test_critical_point_tracking.py  test_critical_point_tracking_double_gyre.cpp  test_critical_point_tracking_double_gyre_unstructured.cpp  test_critical_point_tracking_merger_2d.cpp  test_critical_point_tracking_moving_extremum.cpp  test_critical_point_tracking_moving_extremum_2d.cpp  test_critical_point_tracking_moving_extremum_2d_unstructured.cpp  test_critical_point_tracking_moving_extremum_3d.cpp  test_critical_point_tracking_moving_extremum_3d_unstructured.cpp  test_critical_point_tracking_woven.cpp  test_critical_point_tracking_woven_unstructured.cpp  test_cubic_solve.cpp  test_det3.cpp  test_det4.cpp  test_eig2.cpp  test_eig3.cpp  test_eig4.cpp  test_hoshen_kopelman.cpp  test_inequality_solvers.cpp  test_interpolation.cpp  test_interval.cpp  test_inverse_interpolation.cpp  test_invmat2.cpp  test_invmat2x2.cpp  test_invmat3.cpp  (+36 more)
tests/data/: 1x1.vtu  2x1.vtu  heat2d_adios2.xml
tests/heat2d/: HeatTransfer.cpp  HeatTransfer.h  IO_adios2.cpp  README.md  Settings.cpp  Settings.h
tests/travis/: install-cuda.sh  install-hdf5-netcdf.sh  install-mpich.sh  install-mpsolve.sh  install-paraview.sh  install-spack.sh  install-vtk.sh
(+493 files in other folders)
